log/build_2025-05-28_13-19-30/my_robot_pkg/stderr.log
  File "/home/futill/targer_ws/install/my_robot_pkg/lib/python3.10/site-packages/my_robot_pkg/gui.py", line 189
    return 
    ^^^^^^
SyntaxError: 'return' outside function

